add MCMC and random_mixer files

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,11 @@ build-backend = "hatchling.build"
 
 [project]
 name = "oncapintada"
-version = "0.0.3"
+version = "0.0.4"
 authors = [
-  { name="Leandro Seixas", email="leandro.fisica@gmail.com" },
+  { name="Leandro Seixas", email="leandro.seixas@proton.me" },
 ]
-description = "Generative model for materials discovery"
+description = "Materials informatics utils"
 readme = "README.md"
 license = {file = "LICENSE"} 
 requires-python = ">=3.10"
