--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "oncapintada"
-version = "0.0.4"
+version = "25.11.0"
 authors = [
   { name="Leandro Seixas", email="leandro.seixas@proton.me" },
 ]
@@ -18,7 +18,9 @@ dependencies = [
     'ase',
     'torch',
     'scipy',
-    'matplotlib'
+    'matplotlib',
+    'pytest',
+    'pyyaml'
 ]
 classifiers = [
     "Programming Language :: Python :: 3",
