--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,13 @@ build-backend = "hatchling.build"
 
 [project]
 name = "oncapintada"
-version = "25.11.0"
+version = "25.11.1"
 authors = [
   { name="Leandro Seixas", email="leandro.seixas@proton.me" },
 ]
-description = "Materials informatics utils"
+description = "Onça-pintada (pronounced as OHN-sah peen-TAH-dah) is a Python package designed for the analysis and simulation of atomic configurations in materials science. It provides tools to calculate Short-Range Order (SRO) parameters, generate Special Quasirandom Structures (SQS), and perform Monte Carlo Markov Chain (MCMC) simulations for various materials."
 readme = "README.md"
-license = {file = "LICENSE"} 
+license = {file = "LICENSE"} # MIT License
 requires-python = ">=3.10"
 dependencies = [
     'numpy',
