restone version variable

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "oncapintada"
-dynamic = ["version"] # version = "25.11.3"
+version = "25.11.3"
 authors = [
   { name="Leandro Seixas", email="leandro.seixas@proton.me" },
 ]
@@ -32,7 +32,3 @@ classifiers = [
 
 [project.urls]
 "Homepage" = "https://github.com/seixasgroup/oncapintada"
-
-[tool.hatch.version]
-source = "file"
-path = "src/oncapintada/_version.py"
